crates/rome_formatter/tests/specs/prettier/js/decorators/parens.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: parens.js

---
# Input
```js
class X {
  @(computed().volatile())
  x
}

```

# Output
```js
class X {
  @(computed().volatile())
  x
}

```

# Errors
```
error[SyntaxError]: decorators are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ parens.js:2:3
  │
2 │   @(computed().volatile())
  │   ^^^^^^^^^^^^^^^^^^^^^^^^ TypeScript only syntax


```


